--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -15,6 +15,54 @@ body {
     border-width: 0 1px 1px 1px;
 }
 
+#page-wrapper {
+    padding-left: 150px;
+  }
+  
+  #sidebar-wrapper {
+    position: fixed;
+    width: 250px;
+    height: 100%;
+    margin-left: -250px;
+    background: transparent;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+  
+  #page-content-wrapper {
+    width: 100%;
+    padding: 20px;
+  }
+  /* 사이드바 스타일 */
+  
+  .sidebar-nav {
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  
+  .sidebar-nav li {
+    text-indent: 1.5em;
+    line-height: 2.8em;
+  }
+  
+  .sidebar-nav li button {
+    display: block;
+    text-decoration: none;
+    color: #999;
+  }
+  
+  .sidebar-nav li button:hover {
+    color: #fff;
+    background: rgba(255, 255, 255, 0.2);
+  }
+  
+  .sidebar-nav > .sidebar-brand {
+    font-size: 1.3em;
+    line-height: 3em;
+  }
+
 #main h1 {
     margin-top: 0;
     font-size: 35px;
@@ -44,6 +92,10 @@ body {
     font-size: 12px;
     color: green;
     line-height: 13px;
+}
+
+#send {
+    text-align: center;
 }
 
 form {
